--- a/config/order-service-dev.yml
+++ b/config/order-service-dev.yml
@@ -3,8 +3,8 @@ spring:
     name: order-service
   cloud:
     config:
-      override-none: true
-       
+      override-none: true 
+
 server:  port: 8201
   
 eureka:
@@ -12,12 +12,7 @@ eureka:
     service-url:
       defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
       
-feign:
-  hystrix:
-    enabled: true
+feign:  hystrix:    enabled: true
     
-management:
-  endpoints:
-    web:
-      exposure:
-        include: hystrix.stream
+management:  endpoints:    web:      exposure:        include: hystrix.stream
+        
