--- a/config/zuul-dev.yml
+++ b/config/zuul-dev.yml
@@ -3,30 +3,26 @@ spring:
     name: zuul
   cloud:
     config:
-      override-none: true
-      
-server:
-  port: 3001
+      override-none: true 
+
+server:  port: 3001
   
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
-
+eureka:  client:    service-url:      defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+      
 zuul:
-  retryable: true
+  routes:    item-service: /item-service/**
+    user-service: /user-service/**
+    order-service: /order-service/**
 
-#  routes:
-#    item-service: /item-service/**
-#    user-service: /user-service/**
-#    order-service: /order-service/**
-    
+  retryable: true
+  
+  
 ribbon:
   ConnectTimeout: 1000
   ReadTimeout: 1000
   MaxAutoRetriesNextServer: 1
   MaxAutoRetries: 1
-
+  
 hystrix:
   command:
     default:
@@ -35,8 +31,4 @@ hystrix:
           thread:
             timeoutInMilliseconds: 500
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: hystrix.stream          
+management:  endpoints:    web:      exposure:        include: hystrix.stream
